# mini_parallel

./: .gitignore  README.md  errors.txt  improvements.txt
kmer_counter/: Cargo.toml  kmer_counter.rs  main.rs
rustseq_mini/: Cargo.toml  build.rs
rustseq_mini/benches/: alignment_benchmark.rs
rustseq_mini/src/: benchmark.rs  main.rs  smith_waterman.rs
rustseq_mini/src/gpu/: aligner.rs  kernel.rs  memory.rs  mod.rs
rustseq_mini/src/gpu/kernels/: smith_waterman.cl  smith_waterman.cu
rustseq_mini/src/tools/: linecount.rs  mod.rs  stdin_linecount.rs
smith_waterman/: Cargo.toml  benchmark_results.json  build.rs
smith_waterman/benchmark_results/: run_18_benchmark_results.json  run_1_benchmark_results.json
smith_waterman/src/: aligner.rs  gpu.rs  main.rs  perf_logger.rs  system_info.rs
smith_waterman/src/tools/: benchmark.rs  mod.rs
