[package]
name = "rustseq_mini"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.16"
rayon = "1.8"  # Parallel processing for file pairs
flate2 = "1.0"  # Gzip decompression for FASTQ files
dotenv = "0.15"  # Environment variable loading

# OpenCL dependencies for GPU acceleration
ocl = "0.19"  # OpenCL bindings for Rust
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

[dev-dependencies]
flamegraph = "0.4"  # Performance profiling

[build-dependencies]
cc = "1.0"
